<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/head_up_display" android:background="#00000000" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:layout_gravity="top" android:id="@id/top_indicator_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/top_indicators_top_margin" android:layoutDirection="ltr">
        <Space android:layout_width="@dimen/battery_indicator_left_margin" android:layout_height="@dimen/battery_indicator_width" />
        <ViewStub android:id="@id/low_battery_indicator_stub" android:visibility="invisible" android:layout="@layout/indicator_low_battery" android:layout_width="@dimen/battery_indicator_text_max_width" android:layout_height="@dimen/battery_indicator_width" />
        <ViewStub android:id="@id/low_internal_storage_indicator_stub" android:layout="@layout/indicator_low_internal_storage" android:layout_width="@dimen/top_indicator_image_size" android:layout_height="@dimen/top_indicator_image_size" android:layout_marginRight="@dimen/top_indicators_interval" />
        <ViewStub android:id="@id/low_sd_card_indicator_stub" android:layout="@layout/indicator_low_sd_card" android:layout_width="@dimen/top_indicator_image_size" android:layout_height="@dimen/top_indicator_image_size" android:layout_marginRight="@dimen/top_indicators_interval" />
        <ViewStub android:id="@id/photo_smile_capture_indicator_stub" android:layout="@layout/indicator_photo_smile_capture" android:layout_width="@dimen/top_indicator_image_size" android:layout_height="@dimen/top_indicator_image_size" android:layout_marginRight="@dimen/top_indicators_interval" />
        <ViewStub android:id="@id/video_smile_capture_indicator_stub" android:layout="@layout/indicator_video_smile_capture" android:layout_width="@dimen/top_indicator_image_size" android:layout_height="@dimen/top_indicator_image_size" android:layout_marginRight="@dimen/top_indicators_interval" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr">
        <FrameLayout android:layout_gravity="left" android:id="@id/lazy_inflated_ui_component_container_back" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    </RelativeLayout>
    <ViewStub android:id="@id/trigger_layout_stub" android:layout="@layout/trigger_view_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    <FrameLayout android:id="@id/zoom_dial_view_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="locale" />
    <FrameLayout android:id="@id/icons" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr">
        <LinearLayout android:layout_gravity="left" android:orientation="vertical" android:id="@id/left_container" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="@dimen/left_icon_area_height" android:layout_height="fill_parent" android:layoutDirection="ltr">
            <com.sonyericsson.android.camera.view.PrimaryShortcutGroup android:orientation="vertical" android:id="@id/primary_shortcut_group" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/contextual_setting_shortcut" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_contextual_settings_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_accessibility_menu_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_video_hdr" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_hdr_shortcut_off_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_video_hdr_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_fusion_mode" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_image_quality_control_high_sensitivity_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_manual_fusion_tutorial_title_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_aspect_ratio" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_aspect_ratio_shortcut_16x9_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_aspect_ratio_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_semi_auto" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_color_brightness_shortcut_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_color_brightness_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_hdr" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_contextual_settings_hdr_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_hdr_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_bokeh" android:background="@drawable/primary_selectable_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_bokeh_shortcut" android:scaleType="center" android:contentDescription="@string/cam_strings_bokeh_title_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_night_mode" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_mode_shortcut_nightmode_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_feature_night_shooting_title_all_lang_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_selftimer" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_selftimer_setting_off_icn" android:scaleType="center" android:contentDescription="@string/cam_strings_self_timer_txt" />
                <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:id="@id/primary_shortcut_flash" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:src="@drawable/cam_core_flash_off_icn" android:scaleType="center" android:contentDescription="" />
            </com.sonyericsson.android.camera.view.PrimaryShortcutGroup>
        </LinearLayout>
        <FrameLayout android:layout_gravity="left" android:id="@id/center_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/left_icon_area_height" android:layoutDirection="ltr">
            <TextView android:layout_gravity="left|top" android:id="@id/debug_info_indicator_text" android:layout_width="@dimen/debug_info_indicator_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/left_icon_area_height" android:layout_column="2" />
        </FrameLayout>
        <FrameLayout android:layout_gravity="right" android:id="@id/right_container" android:paddingTop="@dimen/right_icon_area_top_mergin" android:paddingBottom="@dimen/right_icon_area_bottom_mergin" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layoutDirection="ltr">
            <FrameLayout android:layout_gravity="center" android:id="@id/alter_capture_button" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <FrameLayout android:layout_gravity="center|top" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.sonyericsson.cameracommon.contentsview.ContentsContainer android:gravity="center" android:layout_gravity="center" android:id="@id/contents_container" android:layout_width="@dimen/thumbnail_container_side_length" android:layout_height="@dimen/thumbnail_container_side_length" android:transitionName="contents_container" />
            </FrameLayout>
            <FrameLayout android:layout_gravity="center" android:id="@id/capture_button_container" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ModeSelectorButton android:textSize="@dimen/mode_selector_button_text_size" android:textColor="@color/mode_selector_button_text_color" android:gravity="center" android:layout_gravity="center|bottom" android:id="@id/mode_button_shortcut" android:background="@drawable/mode_selector_button" android:paddingLeft="@dimen/mode_selector_button_text_side_margin" android:paddingRight="@dimen/mode_selector_button_text_side_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout android:layout_gravity="left" android:id="@id/left_indicator_container" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/left_indicator_area_left_margin" android:layout_marginTop="@dimen/left_indicator_area_top_margin" android:layout_marginBottom="@dimen/left_indicator_area_bottom_margin" android:layoutDirection="ltr">
            <LinearLayout android:layout_gravity="left|top" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="ltr">
                <ImageView android:id="@id/geo_tag_indicator" android:layout_width="@dimen/layout_notification_icon_size" android:layout_height="@dimen/layout_notification_icon_size" />
                <ImageView android:id="@id/thermal_indicator" android:background="@drawable/cam_high_temperature_icn" android:layout_width="@dimen/layout_notification_icon_size" android:layout_height="@dimen/layout_notification_icon_size" />
            </LinearLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="ltr">
                <GridLayout android:layout_gravity="left|bottom" android:id="@id/scene_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:rowCount="2" android:columnCount="1" android:layoutDirection="ltr">
                    <FrameLayout android:layout_gravity="center" android:layout_width="@dimen/scene_indicator_text_width" android:layout_height="@dimen/scene_indicator_text_width" android:layout_column="0" android:layout_row="1">
                        <ImageView android:layout_gravity="center" android:id="@id/scene_indicator_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" />
                    </FrameLayout>
                    <FrameLayout android:layout_gravity="center" android:layout_width="@dimen/scene_indicator_text_width" android:layout_height="@dimen/scene_indicator_text_width" android:layout_column="0" android:layout_row="0">
                        <ImageView android:layout_gravity="center" android:id="@id/scene_indicator_condition" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" />
                    </FrameLayout>
                </GridLayout>
                <TextView android:layout_gravity="left|center" android:id="@id/scene_indicator_text" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="@dimen/scene_indicator_text_width" android:layout_marginLeft="@dimen/scene_indicator_text_bottom_margin" android:layout_toRightOf="@id/scene_indicator" android:layout_alignParentBottom="true" style="@style/TextAppearance.SomcCamera.RobotoMedium" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout android:layout_gravity="left|bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/auto_hdr_indicator_margin_left" android:layout_marginBottom="@dimen/auto_hdr_indicator_margin_bottom" android:layoutDirection="ltr">
            <ImageView android:id="@id/auto_hdr_indicator_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" />
        </FrameLayout>
        <include android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="fill_parent" layout="@layout/application_navigator" />
        <com.sonyericsson.android.camera.view.baselayout.settingshortcut.MruButtonContainer android:layout_gravity="right|bottom" android:id="@id/mru_button_container" android:layout_width="@dimen/mru_button_container_size" android:layout_height="@dimen/mru_button_container_size" android:layout_marginBottom="@dimen/mru_button_container_bottom_margin" android:layoutDirection="ltr">
            <ImageView android:layout_gravity="center" android:id="@id/mru_button" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </com.sonyericsson.android.camera.view.baselayout.settingshortcut.MruButtonContainer>
        <ViewStub android:layout_gravity="right" android:orientation="horizontal" android:id="@id/predictive_capture_indicator_container_stub" android:layout="@layout/predictive_capture_indicator_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/predictive_capture_indicator_right_margin" />
        <com.sonyericsson.android.camera.view.FrontAngleSwitchButton android:layout_gravity="right" android:id="@id/front_angle_switch_button" android:visibility="gone" android:layout_width="@dimen/front_angle_switch_button_width" android:layout_height="@dimen/front_angle_switch_button_height" android:contentDescription="" android:layoutDirection="ltr" />
        <com.sonyericsson.android.camera.view.ZoomSwitchButton android:layout_gravity="right|center" android:id="@id/zoom_switch_button" android:visibility="gone" android:layout_width="@dimen/zoom_switch_button_width" android:layout_height="@dimen/zoom_switch_button_height" android:layout_marginRight="@dimen/navigator_container_width" android:layoutDirection="ltr" />
    </FrameLayout>
    <com.sonyericsson.android.camera.view.baselayout.settingshortcut.ShortcutButton android:layout_gravity="right|top" android:id="@id/primary_shortcut_facing" android:background="@drawable/primary_shortcut_selector" android:visibility="invisible" android:layout_width="@dimen/left_icon_area_height" android:layout_height="@dimen/left_icon_area_height" android:layout_marginTop="@dimen/right_icon_area_top_mergin" android:src="@drawable/cam_core_main_front_toggle_icn" android:scaleType="center" android:contentDescription="" />
    <FrameLayout android:id="@id/overlay_control_view_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="locale">
        <ViewStub android:id="@id/simple_iq_control_container_stub" android:layout="@layout/baselayout_simple_iq_control_indicator" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </FrameLayout>
    <FrameLayout android:id="@id/setting_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="locale" />
    <FrameLayout android:id="@id/hint_text_view_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="locale">
        <ViewStub android:layout_gravity="right" android:id="@id/left_hint_text_container_sub" android:layout="@layout/hint_text_container_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
        <ViewStub android:layout_gravity="left" android:id="@id/right_hint_text_container_sub" android:layout="@layout/hint_text_container_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    </FrameLayout>
    <include android:id="@id/autoreview_layout" layout="@layout/autoreview_layout" />
    <FrameLayout android:id="@id/side_touch_ui_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr">
        <FrameLayout android:layout_gravity="left" android:id="@id/lazy_inflated_ui_component_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    </RelativeLayout>
    <ViewStub android:id="@id/tutorial_container_stub" android:layout="@layout/tutorial_container_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <FrameLayout android:id="@id/lazy_inflated_ui_component_container_fullscreen" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    <FrameLayout android:id="@id/lazy_inflated_ui_component_container_apps_ui" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" />
</FrameLayout>
